--- a/config/training.yaml
+++ b/config/training.yaml
@@ -17,7 +17,7 @@ TRAIN:
   model_save_filename: medseg
 
 MODEL:
-  bert_type: ../lib/BiomedVLP-CXR-BERT-specialized    #specialized
+  bert_type: ../lib/BiomedVLP-CXR-BERT-specialized    
   vision_type: ../lib/convnext-tiny-224
   project_dim: 768
 
